11/1/15 Version 1.2.0:
* f31a986 fix:fix 404 test to reference 404 handler
* 7dacdd8 fix 404.html to reference cart_help.html, rather than rather than redcross_help.html
* d48c2b2 really add template vars for adminName, adminEmail this time!
* 220891f add admin and version template vars to render contexts, also remove unused vars and replace unused tuple var returns
* c7f02b7 add template vars for adminName, adminEmail, siteVersion, imsVersion
* bf3c32d add settings for VERSION, SITE_VERSION, and SERVER_EMAIL
* 4e98a31 feat:add VERSION so we have a single source of version information