@@ -2,4 +2,4 @@
 # date format = dd/mm/YYYY
 # comment will be used to add comment to GIT tag
 #VERSION=('1.2.0','02/11/2015','add version, admin. server settings')
-VERSION=('1.3.0','XXX','add date and comment to version')
+VERSION=('1.3.0','10/11/2015','allow auto generation of product codes. Add date and comments to version')
