@@ -6,3 +6,5 @@
 * c7f02b7 add template vars for adminName, adminEmail, siteVersion, imsVersion
 * bf3c32d add settings for VERSION, SITE_VERSION, and SERVER_EMAIL
 * 4e98a31 feat:add VERSION so we have a single source of version information
+10/11/2015 Version 1.3.0:
+* 394d155 (HEAD, master) add date and comments to version
